...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_poke_team">PokeTeamActivity</string>
    <string name="need_to_register">Not yet Registered?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="basic_info">Basic Info</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="download_image">Download Image</string>
...
